Fix too much space between carousel title and the carousel itself

--- a/version-2/css/main.css
+++ b/version-2/css/main.css
@@ -98,6 +98,10 @@ body {
   margin-top: 50px;
 }
 
+.carousel {
+  height: 300px;
+}
+
 .carousel-item p {
   color: #514039;
   cursor: default;
